--- a/guide/internals/hierarchy.adoc
+++ b/guide/internals/hierarchy.adoc
@@ -6,7 +6,7 @@ porthier
 
 layout of the ports filesystems
 
-== Description
+==== Description
 
 A map of the filesystem hierarchy used by MacPorts and the ports it
 installs. Much of it is based on `hier(7)`.
@@ -104,12 +104,12 @@ installs. Much of it is based on `hier(7)`.
 `/Applications/MacPorts/`::
   Native macOS applications.
 
-== SEE ALSO
+==== SEE ALSO
 
 `port(1)`, `macports.conf(5)`, `portfile(7)`, `portgroup(7)`,
 `portstyle(7)`, `hier(7)`
 
-== AUTHORS
+==== AUTHORS
 
 Felix Kroniage fkr@opendarwin.org
 
