--- a/guide/portgroups/index.adoc
+++ b/guide/portgroups/index.adoc
@@ -1,7 +1,28 @@
 [[reference.portgroup]]
 == PortGroups
 
-include::intro.adoc[]
+[[reference.portgroup.intro]]
+=== Introduction
+
+PortGroups are simply include files for portfiles. They can define as
+much or as little as a portgroup author feels is necessary to provide a
+set of definitions or behaviors common to a group of portfiles, in order
+that those portfiles can be expressed as simply as possible with minimum
+redundancy.
+
+See the following folder for PortGroup definitions:
+
+`${prefix}/var/macports/sources/rsync.macports.org/macports/release/tarballs/ports/_resources/port1.0/group/`
+
+or if you prefer directly in
+https://github.com/macports/macports-ports/tree/master/_resources/port1.0/group[GitHub]
+
+The requirements of a minimum portfile using a portgroup varies by
+portgroup. The sections below devoted to each portgroup (or, for
+portgroups not documented there yet, the comments in the header of the
+portgroup file itself) should provide guidance on how each portgroup is
+used. Prospective MacPorts developers are also encouraged to examine
+existing portfiles that use these portgroups.
 
 === active_variants
 
@@ -61,7 +82,7 @@ include::intro.adoc[]
 
 [[reference.portgroup.github]]
 === github
-include::github.adoc[]
+include::groups/github.adoc[]
 
 === gitlab
 
@@ -73,13 +94,13 @@ include::github.adoc[]
 
 [[reference.portgroup.gnustep]]
 === gnustep
-include::gnustep.adoc[]
+include::groups/gnustep.adoc[]
 
 === gobject_introspection
 
 [[reference.portgroup.golang]]
 === golang
-include::golang.adoc[]
+include::groups/golang.adoc[]
 
 === gpg_verify
 
@@ -93,7 +114,7 @@ include::golang.adoc[]
 
 [[reference.portgroup.java]]
 === PortGroup java
-include::java.adoc[]
+include::groups/java.adoc[]
 
 === kde4
 
@@ -131,7 +152,7 @@ include::java.adoc[]
 
 [[reference.portgroup.perl]]
 === perl5
-include::perl.adoc[]
+include::groups/perl.adoc[]
 
 === php
 
@@ -139,7 +160,7 @@ include::perl.adoc[]
 
 [[reference.portgroup.python]]
 === python
-include::python.adoc[]
+include::groups/python.adoc[]
 
 === qmake
 
@@ -158,7 +179,7 @@ include::python.adoc[]
 
 [[reference.portgroup.ruby]]
 === ruby
-include::ruby.adoc[]
+include::groups/ruby.adoc[]
 
 === rust_build
 
@@ -183,7 +204,7 @@ include::ruby.adoc[]
 === xcode_workaround
 
 === xcode
-include::xcode.adoc[]
+include::groups/xcode.adoc[]
 
 === xcodeversion
 
