Add first macro, add gitlab

--- a/guide/portgroups/index.adoc
+++ b/guide/portgroups/index.adoc
@@ -84,7 +84,9 @@ existing portfiles that use these portgroups.
 === github
 include::groups/github.adoc[]
 
+[[reference.portgroup.gitlab]]
 === gitlab
+include::groups/gitlab.adoc[]
 
 === gnu_info
 
